--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "@gerandon/calendar": [
+        "dist/gerandon/calendar"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
