--- a/package.json
+++ b/package.json
@@ -4,28 +4,32 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build:lib": "ng build @gerandon/calendar --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/animations": "~15.2.1",
+    "@angular/common": "~15.2.1",
+    "@angular/compiler": "~15.2.1",
+    "@angular/core": "~15.2.1",
+    "@angular/forms": "~15.2.1",
+    "@angular/material": "~15.2.1",
+    "@angular/platform-browser": "~15.2.1",
+    "@angular/platform-browser-dynamic": "~15.2.1",
+    "@angular/router": "~15.2.1",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.5",
-    "@angular/cli": "~15.0.2",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular-devkit/build-angular": "~15.2.1",
+    "@angular/cli": "~15.2.1",
+    "@angular/compiler-cli": "~15.2.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -33,7 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^15.0.0",
+    "ng-packagr": "~15.2.2",
     "typescript": "~4.8.2"
   }
 }
