--- a/projects/gerandon/calendar/package.json
+++ b/projects/gerandon/calendar/package.json
@@ -2,8 +2,12 @@
   "name": "@gerandon/calendar",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0"
+    "@angular/common": "15.2.1",
+    "@angular/core": "^15.2.1",
+    "@angular/material": "~15.2.1",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "moment": "^2.29.4"
   },
   "dependencies": {
     "tslib": "^2.3.0"
