--- a/projects/gerandon/ngx-calendar/package.json
+++ b/projects/gerandon/ngx-calendar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gerandon/calendar",
+  "name": "@gerandon/ngx-calendar",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "15.2.1",
