--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve demo",
+    "build:demo": "ng build demo",
     "build:lib": "ng build @gerandon/ngx-calendar --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
