--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve demo",
-    "build:demo": "ng build demo",
+    "build:pages-demo": "ng build demo --base-href=/calendar-workspace/",
     "build:lib": "ng build @gerandon/ngx-calendar --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
